--- a/package.json
+++ b/package.json
@@ -9,15 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-navigation/core": "^6.4.17",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@types/jest": "^29.5.12",
+    "@types/react-native": "^0.72.8",
+    "@types/react-test-renderer": "^18.3.0",
+    "anleneentryapp": "file:",
+    "axios": "^1.7.5",
     "expo": "~51.0.28",
+    "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-progress": "^5.0.1",
+    "react-native-progress-steps": "^1.3.4",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-virtualized-view": "^1.0.0",
+    "react-use-wizard": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "typescript": "^5.5.4"
   },
   "private": true
 }
