--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "anleneentryapp": "file:",
     "axios": "^1.7.5",
     "expo": "~51.0.28",
+    "expo-font": "~12.0.10",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -33,10 +34,12 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-shadow-2": "^7.1.0",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-virtualized-view": "^1.0.0",
-    "react-use-wizard": "^2.3.0"
+    "react-use-wizard": "^2.3.0",
+    "webidl-conversions": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
