--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "anleneentryapp": "file:",
     "axios": "^1.7.5",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-font": "~12.0.10",
+    "expo-image": "~1.12.15",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.13.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-elements": "^3.4.3",
