--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/core": "^6.4.17",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/jest": "^29.5.12",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
@@ -41,7 +42,9 @@
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-virtualized-view": "^1.0.0",
+    "react-redux": "^9.1.2",
     "react-use-wizard": "^2.3.0",
+    "redux-thunk": "^3.1.0",
     "webidl-conversions": "^7.0.0"
   },
   "devDependencies": {
